# zksync2-python

./: .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE-MIT  MANIFEST.in  Makefile  README.md  SECURITY.md  environment.yml  nft  pyproject.toml  requirements.txt  requirements_old.txt  setup.cfg  zksync_wallet.py
.github/: CODEOWNERS  CONTRIBUTING.md  RELEASE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_report.md
.github/workflows/: publish.yaml  release.yaml  test.yml  validate.yml
contract_abi/: IZkSync.json  L1ERC20Bridge.json  L2ETHBridge.json  ZkSync.json
core/: types.py  utils.py
crypto/: eth_signer.py
crypto/eth_account_patch/: encode_structed_data.py
examples/: 01_deposit.py  02_transfer.py  03_transfer_erc20_token.py  04_deploy_create.py  05_deploy_create_with_constructor.py  05_deploy_create_with_ctor.py  06_deploy_create_with_deps.py  07_deploy_create2.py  08_deploy_create2_deps.py  09_execute_contract.py  09_withdrawal.py  10_execute_legacy.py  10_finalize_withdrawal.py  11_check_balance.py  11_withdrawal.py  12_deploy_token.py  12_misc.py  13_deploy_account_create.py  14_deploy_account_create2.py  15_use_paymaster.py  README.md  utils.py
examples/compiled_contracts/: HelloWorld.json
manage_contracts/: contract_deployer.py  deploy_addresses.py  erc20_contract.py  l1_bridge.py  l2_bridge.py  nonce_holder.py  zksync_contract.py
manage_contracts/contract_abi/: IL2Bridge.json
module/: middleware.py  module_builder.py  request_types.py  response_types.py  zksync_module.py
protocol/: __init__.py  contract_base.py  contract_deployer.py  erc20_contract.py  eth_provider.py  l1_erc20_bridge.py  middleware.py  zksync.py  zksync_contract.py  zksync_module.py  zksync_provider.py
protocol/core/: types.py  utils.py
provider/: eth_provider.py
scripts/: setup.py  wait.py
signer/: eth_signer.py
tests/: constructor_contract_abi.json  constructor_contract_utils.py  counter_contract.hex  counter_contract_utils.py  custom_account_abi.json  custom_account_utils.py  custom_paymaster_utils.py  deploy_contract712_expected.txt  test_config.py  test_contract_deployer.py  test_eip712_structed.py  test_eip712_web3.py  test_eth_provider.py  test_eth_signer.py  test_paymaster.py  test_transaction.py  test_transaction712.py  test_transaction712_encoder.py  test_wallet.py  test_zksync.py  test_zksync_contract.py  test_zksync_integration.py  test_zksync_web3.py
transaction/: misc.py  transaction.py  transaction712.py
types/: types.py
zk_types/: __init__.py  priority_op_tree.py  zk_types.py
(+129 files in other folders)
