[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zksync2"
version = "0.6.0"
authors = [
  { name="Danijel Radakovic", email="danijel@txfusion.io" },
]
description = "zkSync2 python client sdk"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zksync-sdk/zksync2-python"
"Bug Tracker" = "https://github.com/zksync-sdk/zksync2-python/issues"
