[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zksync2"
version = "1.1.0"
authors = [
  { name="Matter Labs", url= "https://matter-labs.io/", email= "hello@matterlabs.io" },
]
description = "zkSync2 python client sdk"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies", "license", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/zksync-sdk/zksync2-python"
"Bug Tracker" = "https://github.com/zksync-sdk/zksync2-python/issues"

[tool.black]
line-length = 99
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
