[metadata]
name = zksync2
description = zkSync2 python client sdk
long_description = file: README.md
author = Viktor Yastrebov
url = https://zksync.io
license = MIT

[options]
packages = find:
install_requires =
    eip712_structs == 1.1.0
    web3==6.0.0

python_requires = >=3.10
setup_requires =
	setuptools_scm >= v7.0.5

[options.extras_require]
test =
    mypy >= 0.8

[options.packages.find]
include =
   	zksync2
    zksync2.*

[options.package_data]
zksync2.manage_contracts.contract_abi =
    ContractDeployer.json
    IERC20.json
    IEthToken.json
    IL1Bridge.json
    IL2Bridge.json
    INonceHolder.json
    IPaymasterFlow.json
    IZkSync.json

# [tox:tox]
# envlist = py{38,39},mypy

# [testenv:py{38,39}]
# deps = coverage
# setenv = ZK_SYNC_LIBRARY_PATH=/lib/zks-crypto-linux-x64.so
# commands = coverage run -m unittest
#
# [testenv:mypy]
# extras = test
# commands = mypy .
#
# [mypy]
# show_error_codes = True
# no_implicit_optional = True
#
# [mypy-setuptools.*]
# ignore_missing_imports = True
#
# [mypy-eth_account.*]
# ignore_missing_imports = True
